# ParaScout

./: .gitignore  .readthedocs.yaml  Data_Reading.py  README.md  combination_of_parameters.ipynb  combinations.py  data_test.ipynb  generating_test_data_module.py  hello_sohini.txt  plotting1D2D.py  pyproject.toml
data/: params_reion
dev_tests/: sohini_dev.ipynb
docs/: CHANGELOG.rst  api.rst  conf.py  index.rst
docs/_build/doctrees/: CHANGELOG.doctree  api.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  objects.inv  searchindex.js
docs/_build/html/_sources/: api.rst.txt
parascout/: __init__.py  dispatcher.py  plotting_functions.py
scripts/: combinations.py  generating_test_data_module.py
src/: dispatcher.py  plotting_functions.py
test_data_multi_dimension/: 1D.txt  2D.txt  3D.txt  4D.txt  5D.txt
