[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "parascout"
version = "0.1.0"
description = "A tool for evaluating and visualising how well a parameter space has been explored"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy",
    "plotly",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "notebook",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["parascout*"]
